<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroEquipoActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overpass"
        android:text="@string/vover"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overpass"
        android:text="@string/registroequipo"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="312dp"
        android:layout_height="355dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="190dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/spinner_nombre_oficial"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <Spinner
            android:id="@+id/spinner_alias"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <Spinner
            android:id="@+id/spinner_escudo"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <Spinner
            android:id="@+id/spinner_ciudad"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <Spinner
            android:id="@+id/spinner_estadio"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/imageViewEscudo"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrouno"
        android:fontFamily="@font/overpass"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.133" />


</androidx.constraintlayout.widget.ConstraintLayout>